# barometer

./: .env  .env.example  .gitignore  README.md  package-lock.json  package.json  pyproject.toml  requirements.txt  vue.config.js
migrations/: env.py
migrations/versions/: 2025_05_10_1529-e9d24d760fe9_add_user_model.py  2025_05_22_1102-3ae8c863930b_add_main_models.py
src/: App.vue  main.py
src/api/: routers.py
src/auth/: controllers.py  role_checks.py  schemas.py  services.py  utils.py
src/auth/dependencies/: auth_module.py
src/auth/exceptions/: __init__.py  domain.py  http.py
src/components/: BottomNav.vue
src/config/: __init__.py  auth.py  common.py  db.py  project.py
src/core/: dependencies.py
src/core/exceptions/: __init__.py  domain.py  http.py
src/core/models/: mixins.py
src/core/schemas/: base.py  mixins.py
src/database/: __init__.py  db_helpers.py
src/entities/bar/: controllers.py  models.py  repositories.py  schemas.py  services.py
src/entities/bar/dependencies/: repositories.py  services.py
src/entities/bar/exceptions/: __init__.py  domain.py  http.py
src/entities/cocktail/: controllers.py  models.py  repositories.py  schemas.py  services.py
src/entities/cocktail/dependencies/: repositories.py  services.py
src/entities/tag/: controllers.py  models.py  repositories.py  schemas.py  services.py
src/entities/tag/exceptions/: http.py  (+2 more)
src/entities/user/: controllers.py  models.py  repositories.py  schemas.py  services.py
src/router/: index.js
src/views/: BarDetailed.vue  CocktailDetailed.vue  FavouritesPage.vue  MainPage.vue
(+10 files in other folders)
